--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img class="experience-img" src="./src/imgs/2017.jpg" alt="experience">
             <div class="experience-content">
                 <p>Since 2017 I've been working in the software house which in the meantime transfered into product
-                    comopany.
+                    company.
                     From the begining I tested RESTful API <span class="technologies">(Postman, API tester)</span> and
                     documented both API and UI features.</p></br>
                 </p>
