--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <div class="container">
         <nav class="menu">
             <ul class="menu-list">
-                <li class="menu-item"><a>Experience</a></li>
-                <li class="menu-item"><a>Projects</a></li>
-                <li class="menu-item"><a>Contact</a></li>
+                <li class="menu-item"><a href="#experience">Experience</a></li>
+                <li class="menu-item"><a href="#projects">Projects</a></li>
+                <li class="menu-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
     <div class="container-sections">
         <div class="section experience">
-            <img class="experience-img" src="./src/imgs/2017.jpg" alt="experience">
+            <img class="experience-img" src="./src/imgs/2017.jpg" alt="experience" id="experience">
             <div class="experience-content">
                 <p>Since 2017 I've been working in the software house which in the meantime transfered into product
                     company.
@@ -53,7 +53,7 @@
                 </p>
             </div>
         </div>
-        <div class="section section-projects">
+        <div id="projects" class="section section-projects">
             <div class="section-header">
                 Projects
             </div>
@@ -91,7 +91,7 @@
                 
             </div>
         </div>
-        <div class="section section-contact">
+        <div class="section section-contact" id="contact">
             <div class="section-header contact-header">
                 Contact
             </div>
